# wasm-vis

./: .gitignore  Cargo.toml  ROADMAP.md  initial-claude-plan.md
crates/vis-core/: Cargo.toml
crates/vis-core/src/: lib.rs
crates/vis-core/src/compile/: bar.rs  line.rs  mod.rs  stack.rs
crates/vis-core/src/ir/: mark.rs  mod.rs  scene.rs  style.rs
crates/vis-core/src/scale/: band.rs  linear.rs  mod.rs
crates/vis-core/src/spec/: chart.rs  encoding.rs  mod.rs
crates/vis-render/: Cargo.toml
crates/vis-render/src/: lib.rs  svg.rs
examples/: README.md  aggregated_bar.json  aggregated_bar_chart.rs  bar.json  bar_chart.rs  grouped_bar.json  grouped_bar_chart.rs  horizontal_bar.json  horizontal_bar_chart.rs  line.json  line_chart.rs  normalized_stacked_bar.json  normalized_stacked_bar_chart.rs  stacked_bar.json  stacked_bar_chart.rs  stacked_line.json  stacked_line_chart.rs
src/: lib.rs
